css/style.css
/*Navigation*/
.navbar-custom {
    margin-bottom: 0;
    border-bottom: 1px solid rgba(255,255,255,.3);
    text-transform: uppercase;
    font-family: "Roboto",sans-serif;
    background-color: #000;
}

.navbar-custom .navbar-brand {
    font-weight: 700;
}

.navbar-custom .navbar-brand:focus {
    outline: 0;
}

.navbar-custom, .navbar-brand, .navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    color: #fff !important;
}

.navbar-custom .navbar-brand .navbar-toggle:focus,
.navbar-custom .navbar-brand .navbar-toggle:active {
    outline: 0;
}

.navbar-custom a {
    color: #708090;
}

.navbar-custom .nav li a {
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.navbar-custom .nav li a:hover {
    outline: 0;
    color: #2F4F4F;
    background-color: transparent;
}

.navbar-custom .nav li a:focus,
.navbar-custom .nav li a:active {
    outline: 0;
    background-color: transparent;
}

.navbar-custom .nav li.active {
    outline: 0;
}

.navbar-custom .nav li.active a {
    background-color: rgba(255,255,255,.3);
}

.navbar-custom .nav li.active a:hover {
    color: #A9A9A9;
}
.menu_img {
    padding-top: 10px;
}

.page-scroll {
    font-size: 12px;
}

@media(min-width:768px) {
    .navbar-custom {
        padding: 20px 0;
        border-bottom: 0;
        letter-spacing: 1px;
        background: 0 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }

    .navbar-custom.top-nav-collapse {
        padding: 0;
        border-bottom: 1px solid rgba(255,255,255,.3);
        background: #000;
    }
        #nav-modified {
            margin-left: 3%;
    }
    .cont_extra {
        padding-top: 5%;
    }
}
@media(max-width:767px) {
    .menu_img {
        padding-left: 10px;
    }
    .logo {
        padding-top: 10px;
    }
    .cont_extra {
        padding-top: 10px;
}
    .navbar-custom a {
        color: #fff;
    }
    .navbar-custom .nav li a:hover {
        color: #A9A9A9;
    }
    .sm-links {
        float: right;
        position: relative !important;
    }
}
.text_cursive {
        font-style: oblique;

}
.sm-links {
  padding: 10px;
  right: 0;
  top: 0;
  position: absolute;
}

